fix: :bug: main content positioning using gap

--- a/Exercises/CSS Exercise/CSS/style.css
+++ b/Exercises/CSS Exercise/CSS/style.css
@@ -28,6 +28,8 @@ body {
 
     display: grid;
     grid-template: repeat(12, 1fr)/repeat(12, 1fr);
+
+    column-gap: 5rem;
 }
 
 
@@ -87,38 +89,27 @@ body {
 /* NAV END */
 
 /* MAIN */
-.site-container__main {
-    grid-column: 2 / span 10;
-    grid-row: 3/ span 8;
-
-    display: grid;
-    grid-template: repeat(12,1fr) /repeat(12,1fr);/*card and text*/
-}
-
 .site-container__main-text {
-    grid-column: 7/ span 3;
-    grid-row: 3/span 5;
+    grid-column: 6/ span 7;
+    grid-row: 4/span 4;
     padding: 5rem;
     font-size: xx-large;
     font-weight: 200;
     line-height: 25px;
 }
 
-
 .site-container__main-card {
-    grid-row: 1/ span 12;
-    grid-column: 1/ span 5;
+    grid-row: 3/ span 8;
+    grid-column: 2/ span 5;
     background-color: rgb(255 255 255);
     color: grey;
-
     border-radius: 1em;
     box-shadow: 0px 0px 10px rgb(200 200 200);
-   
     display: grid;
-    grid-template: 1fr 6fr/ 1fr; 
+    grid-template: 1fr 6fr/ 1fr;
 }
 .site-main-card__nav{
-    grid-column: 1/span 4;
+    grid-column: 1/span 6;
 
     display: grid;
     grid-template-columns: repeat(4, 1fr);
